force-app/main/default/objects/Product2/fields/Reserved_for_Display__c.field-meta.xml
<CustomField>
    <fullName>Reserved_for_Display__c</fullName>
    <label>Reserved for Display</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>