force-app/main/default/objects/Product2/fields/Rigging_Time__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Time__c</fullName>
    <description>Expected time to rig or prepare an item</description>
    <label>Rigging Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>