force-app/main/default/objects/Product2/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <description>The series the boat belongs in</description>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WideBody</fullName>
            </value>
            <value>
                <fullName>ProSport TL</fullName>
            </value>
            <value>
                <fullName>ProSport SC</fullName>
            </value>
            <value>
                <fullName>Angler</fullName>
            </value>
            <value>
                <fullName>AllSport</fullName>
            </value>
            <value>
                <fullName>Xtreme</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>Xcalibur</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Xterminator</fullName>
            </value>
            <value>
                <fullName>XGS</fullName>
            </value>
            <value>
                <fullName>Splash</fullName>
            </value>
            <value>
                <fullName>Enjoy</fullName>
            </value>
            <value>
                <fullName>BayShore</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Luxura</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Ultralite</fullName>
            </value>
            <value>
                <fullName>Camo</fullName>
            </value>
            <value>
                <fullName>Little Jonny</fullName>
            </value>
            <value>
                <fullName>XTR</fullName>
            </value>
            <value>
                <fullName>VIBE</fullName>
            </value>
            <value>
                <fullName>L series</fullName>
                <label>L-Series</label>
            </value>
            <value>
                <fullName>Q-Series</fullName>
            </value>
            <value>
                <fullName>XTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>