force-app/main/default/objects/Product2/fields/Specified_Next_Three_Months__c.field-meta.xml
<CustomField>
    <fullName>Specified_Next_Three_Months__c</fullName>
    <label>Specified Next Three Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>