force-app/main/default/objects/Product2/fields/Stack_Size__c.field-meta.xml
<CustomField>
    <fullName>Stack_Size__c</fullName>
    <label>Stack Size</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>