force-app/main/default/objects/Product2/fields/Standard_Motor__c.field-meta.xml
<CustomField>
    <fullName>Standard_Motor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard_Motor</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Standard Motor)</relationshipLabel>
    <relationshipName>Products_SM</relationshipName>
    <type>Lookup</type>
</CustomField>