force-app/main/default/objects/Product2/fields/Standard_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Standard_Trailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Trailer</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Standard Trailer)</relationshipLabel>
    <relationshipName>Products_ST</relationshipName>
    <type>Lookup</type>
</CustomField>