force-app/main/default/objects/Product2/fields/Standard_Trolling_Motor__c.field-meta.xml
<CustomField>
    <fullName>Standard_Trolling_Motor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Trolling Motor</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Standard Trolling Motor)</relationshipLabel>
    <relationshipName>Products_STM</relationshipName>
    <type>Lookup</type>
</CustomField>