force-app/main/default/objects/Product2/fields/Towing_Weight__c.field-meta.xml
<CustomField>
    <fullName>Towing_Weight__c</fullName>
    <label>Towing Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>