force-app/main/default/objects/Product2/fields/Unique_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Product_Code__c</fullName>
    <description>A Unique product code that corresponds to the IEM product code</description>
    <label>Unique Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>