force-app/main/default/objects/Product2/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <description>Units that items are measured in</description>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Gallon</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>Litre</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Quart</fullName>
            </value>
            <value>
                <fullName>Square Yard</fullName>
            </value>
            <value>
                <fullName>Yard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>