force-app/main/default/objects/Product2/fields/usedInOpportunity__c.field-meta.xml
<CustomField>
    <fullName>usedInOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>usedInOpportunity</label>
    <type>Checkbox</type>
</CustomField>