force-app/main/default/objects/Product2/fields/Warranty_Accrual_0488C__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Accrual_0488C__c</fullName>
    <label>Warranty Accrual - 0488C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>