force-app/main/default/objects/Product2/fields/Wow_Model__c.field-meta.xml
<CustomField>
    <fullName>Wow_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this model qualifies for special discounts for dealers</description>
    <label>Wow Model</label>
    <type>Checkbox</type>
</CustomField>