force-app/main/default/objects/Product2/recordTypes/Fees.recordType-meta.xml
<RecordType>
    <fullName>Fees</fullName>
    <active>true</active>
    <description>Fees</description>
    <label>Fees</label>
</RecordType>