force-app/main/default/objects/Product2/recordTypes/Insurance.recordType-meta.xml
<RecordType>
    <fullName>Insurance</fullName>
    <active>true</active>
    <label>Insurance</label>
</RecordType>