force-app/main/default/objects/Product2/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>Internal Products mostly to be used in Internal Labour Service ERP</description>
    <label>Internal</label>
</RecordType>