force-app/main/default/objects/Product2/recordTypes/Labour.recordType-meta.xml
<RecordType>
    <fullName>Labour</fullName>
    <active>true</active>
    <description>Services</description>
    <label>Labour</label>
</RecordType>