force-app/main/default/objects/Product2/recordTypes/Motor.recordType-meta.xml
<RecordType>
    <fullName>Motor</fullName>
    <active>true</active>
    <description>Outboard Motors</description>
    <label>Motor</label>
</RecordType>