force-app/main/default/objects/Product2/recordTypes/Part.recordType-meta.xml
<RecordType>
    <fullName>Part</fullName>
    <active>true</active>
    <description>Part</description>
    <label>Part</label>
</RecordType>