force-app/main/default/objects/Product2/recordTypes/Trailer.recordType-meta.xml
<RecordType>
    <fullName>Trailer</fullName>
    <active>true</active>
    <description>Boat trailer</description>
    <label>Trailer</label>
</RecordType>