force-app/main/default/objects/Product2/recordTypes/Trolling_Motor.recordType-meta.xml
<RecordType>
    <fullName>Trolling_Motor</fullName>
    <active>true</active>
    <description>Trolling Motors</description>
    <label>Trolling Motor</label>
</RecordType>