force-app/main/default/objects/Product2/listViews/ActiveProducts.listView-meta.xml
<ListView>
    <fullName>ActiveProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>Model_Year__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
    <language>en_US</language>
</ListView>