force-app/main/default/objects/Product2/listViews/All_Inventory_with_MRP_time.listView-meta.xml
<ListView>
    <fullName>All_Inventory_with_MRP_time</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>Unique_Product_Code__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Average_MRP_Time_Days__c</columns>
    <columns>Availability_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Inventory_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Last_Year_Season_Consumption__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Availability_Percentage__c</field>
        <operation>lessThan</operation>
        <value>100</value>
    </filters>
    <label>Inventory Product Order Planning</label>
</ListView>