force-app/main/default/objects/Product2/listViews/checking_status.listView-meta.xml
<ListView>
    <fullName>checking_status</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved for Use,Garbage</value>
    </filters>
    <label>checking status</label>
    <language>en_US</language>
</ListView>