force-app/main/default/objects/Product2/listViews/Parts_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Parts_Pending_Approval</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Status__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending_Approval</value>
    </filters>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Part</value>
    </filters>
    <label>Parts Pending Approval</label>
</ListView>