force-app/main/default/objects/Product2/listViews/Parts_unit_value.listView-meta.xml
<ListView>
    <fullName>Parts_unit_value</fullName>
    <columns>IEM_Unique_Part_Number__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>AcctSeed__Unit_Cost__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>Physical_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Part</value>
    </filters>
    <label>Parts unit value</label>
    <language>en_US</language>
</ListView>