force-app/main/default/objects/Product2/listViews/RRO_retail_rig_s.listView-meta.xml
<ListView>
    <fullName>RRO_retail_rig_s</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>RRO</value>
    </filters>
    <label>RRO retail rig&apos;s</label>
    <language>en_US</language>
</ListView>