force-app/main/default/objects/Product2/listViews/Tax.listView-meta.xml
<ListView>
    <fullName>Tax</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Unique_Product_Code__c</columns>
    <columns>AcctSeed__Revenue_GL_Account__c</columns>
    <columns>AcctSeed__Expense_GL_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Tax</value>
    </filters>
    <label>Tax</label>
    <language>en_US</language>
</ListView>