force-app/main/default/objects/Product2/listViews/Travel_Covers.listView-meta.xml
<ListView>
    <fullName>Travel_Covers</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>On_Hand__c</columns>
    <columns>Allocated__c</columns>
    <columns>Current_Availability__c</columns>
    <columns>On_Order__c</columns>
    <columns>Future_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Bow to Stern</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Cockpit Cover</value>
    </filters>
    <label>Travel Covers</label>
    <language>en_US</language>
</ListView>